--- a/index.html
+++ b/index.html
@@ -237,6 +237,11 @@
             </div>
 
             <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
+            <div class="navbar-nav align-items-center">
+                <div class="nav-item d-flex align-items-center">
+                  <i class='bx bx-meteor'></i>
+                </div>
+              </div>
 
               <ul class="navbar-nav flex-row align-items-center ms-auto">
                 <!-- Place this tag where you want the button to render. -->
